$Id$

TODO:
- classpath, jamvm
- give W900V a AVM-Webinterface (from 7150)
- bird and netsnmp don't build with more than one job

Latest changes:
- Improved menuconfig tool adopted from buildroot2:
  * Comprehensive online help
  * Options' help texts also show dependency information:
    + Which condition(s) does an option depend on?
    + By which other option(s) was an option selected?
    + Which other options does an option select?
    + Where is an option defined (file name + line no.)?
  * Seach mode: wildcard search for option names via "/" hotkey.
    By the way: search mode also has online help.
- Added download mirror #3 to Config.in
- tools/make/busybox-tools.mk: activate download target on demand to avoid
  collision with identical target for regular busybox on one hand and to
  avoid make complaining about a missing target when building tools busybox
  from scratch on the other hand.
- tools/ds_download: changed 'od -D' to 'od -d' to make it compatible with
  old versions of GNU coreutils (e.g. od 5.2.1)

=== release ds26-14.3 ===

- Cross-cutting changes in ds-mod-specific package download:
  * New shell script tools/ds_download provides a uniform way to download
    ds-mod-specific packages such as application and add-on packages as well
    as precompiled toolchains. The script first checks a predefined list of
    download servers (mirrors) and only uses an optionally provided "original"
    server as fallback, which is important for new package versions not
    available on mirrors yet.
  * New variable DL_TOOL in Makefile points to tools/ds_download
  * List of download sites (mirrors) can be edited in menuconfig (Advanced
    options -> DS-Mod package download sites). Currently there are five slots
    for download servers, two of which have default values. Two others are
    reserved for later use and #5 is freely editable by users. This enables
    users to set up their private mirrors on their own LAN or WAN servers.